Corrected the top margin of the content since wide enough displays would push it off screen.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ h1 {
 	color: #555;
 	font-size: 3em;
 	font-weight: bold;
-	margin-top: 25%;
+	margin-top: 2em;
 	padding: .5em;
 	text-align: center;
 	text-shadow: 0px 2px 2px rgba(150, 150, 150, 0.25);
